Fixed alignment

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -26,10 +26,6 @@
         line-height: 1;
         margin-right: 1rem;
 
-        &:first-child {
-          margin-bottom: .75rem;
-        }
-
         // Publish date
         time {
           display: inline-block;
@@ -44,6 +40,12 @@
           li {
             display: inline-block;
             list-style: none;
+          }
+        }
+
+        &:not(:last-child) {
+          @media only screen and (max-width: $large-breakpoint) {
+            margin-bottom: .75rem;          
           }
         }
       }
